--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js",
     "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
@@ -15,8 +16,12 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "knex": "^0.95.10",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.0.2"
   }
 }
